--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,19 @@
 start_date: ''
 end_date: ''
 adjust: qfq
+# 本地 MySQL 配置（可选）
+mysql:
+  host: 127.0.0.1
+  port: 3306
+  user: root
+  password: 'Belldandy_13579'
+  database: trade_cache
+  charset: utf8mb4
 stocks:
 - '601212'
 - 000901
+- '300024'
+- '688256'
+- '688158'
+- '09678.HK'
 output_dir: data
