--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
 akshare>=1.12.0
 pandas>=2.0.0
 PyYAML>=6.0
+PyMySQL>=1.1.0
 flask>=3.0.0
+matplotlib>=3.7.0
+scipy>=1.10.0
+statsmodels>=0.14.0
+PyWavelets>=1.4.0
