--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.4.0",
-    "vue-router": "^4.2.0",
-    "pinia": "^2.1.0",
+    "@element-plus/icons-vue": "^2.3.1",
     "echarts": "^5.4.3",
     "element-plus": "^2.6.0",
-    "@element-plus/icons-vue": "^2.3.1"
+    "marked": "^17.0.1",
+    "pinia": "^2.1.0",
+    "vue": "^3.4.0",
+    "vue-router": "^4.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
